--- a/lib/templates/post.hmtl.heex
+++ b/lib/templates/post.hmtl.heex
@@ -1,1 +1,10 @@
+<.layout>
 <h2> A post </h2>
+
+<%= raw @post.body %>
+<ul>
+  <li :for={ topic <- @post.topics || []}>
+    <a href={"/topics/#{topic}.html"}> <%= topic %> </a>
+  </li>
+</ul>
+</.layout>
