--- a/lib/templates/log.hmtl.heex
+++ b/lib/templates/log.hmtl.heex
@@ -1,5 +1,6 @@
 <.layout>
-<h2> A post </h2>
-
-<%= raw @post.body %>
+<div class="post">
+  <h2> A post </h2>
+  <%= raw @post.body %>
+</div>
 </.layout>
