--- a/lib/templates/index.html.heex
+++ b/lib/templates/index.html.heex
@@ -1,18 +1,18 @@
 <.layout>
-  <p>
-    A systems blog
-  </p>
-  <h1> Latest Logs and developments </h1>
+  <p class="text-2xl font-bold text-primary mb-2"> Latest Logs and developments </p>
   <ul>
     <li :for={post <- @logs}>
-      <a href={post.path}> <%= post.title %> </a>
+      <a href={post.path}
+        class="hover:underline"
+      > <%= post.title %> </a>
     </li>
   </ul>
   <p> or check out the <a href="/logs">log index</a>.</p>
-  <hr>
-  <h1> Current systems </h1>
+
+  
+  <p class="text-2xl font-bold text-primary mb-2 mt-10"> Current systems </p>
   <ul>
-    <li :for={post <- @systems} class="system-item">
+    <li :for={post <- @systems} class="hover:underline">
       <a href={post.path}> <%= post.title %> </a>
     </li>
   </ul>
