--- a/lib/templates/logs_index.html.heex
+++ b/lib/templates/logs_index.html.heex
@@ -1,11 +1,10 @@
 <.layout>
 <h2>Logbook</h2>
 <ul>
-<li :for={log <- @logs}>
-      <a href={log.path}>
-      <%= log.date %>
-       <%= log.title %> </a>
-
-</li>
+  <li :for={log <- @logs}>
+    <a href={log.url}>
+      <%= log.date %> <%= log.title %>
+    </a>
+  </li>
 </ul>
 </.layout>
