--- a/lib/templates/index.html.heex
+++ b/lib/templates/index.html.heex
@@ -3,18 +3,21 @@
   <ul>
     <li :for={post <- @logs}>
       <a href={post.path}
-        class="hover:underline"
-      > <%= post.title %> </a>
+        class="hover:underline ml-5"
+      >
+      <%= post.date %>,<%= post.title %>
+
+      <em> <%= post.description %> </em>
+      </a>
     </li>
   </ul>
-  <p> or check out the <a href="/logs">log index</a>.</p>
-
+  <p class="pt-5"> or check out the <a href="/logs">log index</a>.</p>
   
-  <p class="text-2xl font-bold text-primary mb-2 mt-10"> Current systems </p>
+  <p class="text-2xl font-bold text-primary mb-2 mt-10"> Current systems &amp; methodologies </p>
   <ul>
-    <li :for={post <- @systems} class="hover:underline">
+    <li :for={post <- @systems} class="hover:underline ml-5">
       <a href={post.path}> <%= post.title %> </a>
     </li>
   </ul>
-  <p> or check out the <a href="/systems">systems index</a>.</p>
+  <p class="pt-5"> or check out the <a href="/systems">systems index</a>.</p>
 </.layout>
